--- a/resources/login.html
+++ b/resources/login.html
@@ -7,7 +7,7 @@
     <div class="max-w-xs w-full m-auto bg-black rounded p-5">
       <!-- header -->
       <header>
-        <img class="w-20 mx-auto mb-5" src="https://juxt.land/logo.svg" />
+        <img class="w-20 mx-auto mb-5" src="/juxt-logo-on-black.svg" />
       </header>
       <!-- form -->
       <form method="POST" action="/_site/login">
