--- a/style/examples/home.html
+++ b/style/examples/home.html
@@ -6,10 +6,12 @@
       <h2 class="p-2">My timesheets</h2>
       <table class="m-2 border-separate border border-yellow-400">
         <tbody>
-          <tr class="bg-red-50">
-            <td class="p-2">more stuff yo</td>
-            <td class="">last weekii</td>
-          </tr>
+          <foreach foo>
+            <tr class="bg-red-50">
+              <td class="p-2">more stuff yo</td>
+              <td class="">last weekii</td>
+            </tr>
+          </foreach>
           <tr>
             <td>more stuff yo</td>
             <td>last week</td>
